# puteus

./: .env.example  .gitignore  LICENSE  README.md  log_config.yml  pyproject.toml
app/: admin.py  api.py  check_source.py  config.py  db.py  main.py  scraper.py  tasks.py
app/models/: articles.py  base.py  mixins.py  model_service.py  sources.py  urls.py
app/routers/: check_source.py  models.py
examples/: reddit_posts.ipynb
scripts/: __init__.py  bootstrap_db.py
